--- a/AIEarthSpirit/AIEarthSpirit.csproj
+++ b/AIEarthSpirit/AIEarthSpirit.csproj
@@ -88,7 +88,8 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>D:\Hacks\Divine\References\SharpDX.Direct2D1.dll</HintPath>
     </Reference>
-    <Reference Include="SharpDX.Direct3D11">
+    <Reference Include="SharpDX.Direct3D11, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>D:\Hacks\Divine\References\SharpDX.Direct3D11.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.DXGI, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL">
