--- a/Rock.Heroes/Rock.Heroes.csproj
+++ b/Rock.Heroes/Rock.Heroes.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Modules\AiEarthSpirit\Items\Shivas_guard.cs" />
     <Compile Include="Modules\AiEarthSpirit\Items\ItemsHelper.cs" />
     <Compile Include="Modules\AiEarthSpirit\Items\Veil_of_discord.cs" />
+    <Compile Include="Modules\AutoHook.cs" />
     <Compile Include="Modules\SfRazes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
