--- a/Utilities/Utilities.csproj
+++ b/Utilities/Utilities.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Context.cs" />
     <Compile Include="Modules\Antislark.cs" />
     <Compile Include="Modules\AutoDust.cs" />
+    <Compile Include="Modules\MaxBlinkRange.cs" />
     <Compile Include="Modules\Creepblocker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
